# ludi-gestion-toulouse

./: .gitignore  Makefile  Readme.md  pyproject.toml
.github/workflows/: test_ci.yml
src/: manage.py
src/common/: admin.py  forms.py  models.py
src/common/migrations/: 0001_initial.py
src/events/: admin.py  app.py  core.py  forms.py  models.py  tests.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_candidacy.py  0002_candidacycandidate_disk_jockey_and_more.py  0003_remove_event_participants_alter_candidacy_candidates_and_more.py
src/events/templates/events/: events.html  register-bulk-candidacies.html
src/events/templatetags/: is_candidating_alone.py
src/ludigestion/: asgi.py  settings.py  urls.py  wsgi.py
src/static/css/: base.css  events.css  header.css  tasks.css
src/tasks/: models.py  tests.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py  0002_task_contributers.py
src/tasks/templates/tasks/: tasks.html
src/templates/: base.html  header.html  home.html  random_gif.html  register.html
src/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
