[tool.poetry]
name = "gestion"
version = "0.1.0"
description = ""
authors = ["Philippe GALVAN <git.philippeG@outlook.com>"]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
environs = "^9.5.0"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
